@@ -1,5 +1,7 @@
 #VERSION 0.8.6#
 
+ - added methods setVars() and addVars() to Peak_View
+
  - fixed minor problem of css style in Peak_View_Helper_Debugbar
 
  - fixed method validate() for array key errors that do not exists in Peak_Filters_Advanced
